--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>leon | template</title>
     <!--------font awesome all.min------------>
-    <link rel="stylesheet" href="/css/all.min.css" />
+    <link rel="stylesheet" href="/dist/all.min.css" />
     <!------google fonts------->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@200;300;400;500;600;700;800&display=swap"
         rel="stylesheet" />
-    <link href="/css/style.css" rel="stylesheet">
+    <link href="/dist/style.css" rel="stylesheet">
 </head>
 
 <body>
